--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Log In</h1>
-<form method="POST" action="{% url 'login' %}">
+<form method="POST" action="{% url 'login' %}" class="z-depth-3">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="hidden" name="next" value="{{ next }}">
