--- a/main_app/templates/main_app/comment_confirm_delete.html
+++ b/main_app/templates/main_app/comment_confirm_delete.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Delete Event</h1>
+  <h1>Delete Comment</h1>
 
-  <h4>Are you sure you want to delete <span class="teal-text">{{ object.content }}</span>?</h4>
+  <h4>Are you sure you want to delete&nbsp;<span class="item-to-delete">{{ object.content }}</span>?</h4>
 
-  <form action="" method="POST">
+  <form action="" method="POST" class="confirm-delete">
     {% csrf_token %}
-    <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'detail' object.event.id %}">Cancel</a>
+    <input type="submit" value="Yes - Delete!" class="btn">&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="{% url 'detail' object.event.id %}" class="btn">NO, CANCEL</a>
   </form>
 {% endblock %}
