--- a/main_app/templates/events/events_sanfrancisco.html
+++ b/main_app/templates/events/events_sanfrancisco.html
@@ -53,6 +53,47 @@
       <p>Neighborhood: {{ event.neighborhood }}</p>
       <p>City: {{ event.city }}</p>
     </div>
+    <div class="col s6" id="star-field">
+      <div>
+        <br>
+        <p>Average Rating</p>
+        {% if event.average_rating == 1 %}
+        <span class="yes-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        {% endif %}
+        {% if event.average_rating == 2 %}
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        {% endif %}
+        {% if event.average_rating == 3 %}
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        {% endif %}
+        {% if event.average_rating == 4 %}
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="no-star">&#9733;</span>
+        {% endif %}
+        {% if event.average_rating == 5 %}
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        <span class="yes-star">&#9733;</span>
+        {% endif %}
+      </div>
+    </div>
   </div>
     <div class="col s6">
       <div>
