--- a/main_app/templates/events/my_index.html
+++ b/main_app/templates/events/my_index.html
@@ -12,6 +12,7 @@
       <a href="{% url 'detail' event.id %}">
         <span class="card-title">{{ event.title }}</span>
       </a>
+      <br>
       <p>Date: {{ event.date }}</p>
       <p>Time: {{ event.time }}</p>
       <p>Description: {{ event.description }}</p>
@@ -35,7 +36,6 @@
 {% endfor %}
 <br>
 <hr>
-<br>
 <h2>Past Events</h2>
 {% for event in events %}
 {% if event.date < today %} 
@@ -46,6 +46,7 @@
       <a href="{% url 'detail' event.id %}">
         <span class="card-title">{{ event.title }}</span>
       </a>
+      <br>
       <p>Date: {{ event.date }}</p>
       <p>Time: {{ event.time }}</p>
       <p>Description: {{ event.description }}</p>
@@ -54,39 +55,39 @@
       <p>City: {{ event.city }}</p>
     </div>
   </div>
-  <div class="col s6" id="star-field">
-    <div>
-      <br>
-      <p>Average Rating</p>
-      {% if event.average_rating == 1 %}
+  <div class="col s6">
+    <br>
+    <p>Average Rating</p>
+    <div id="star-field">
+      {% if event.average_rating >= 0 and event.average_rating <= 1.5 %} 
       <span class="yes-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       {% endif %}
-      {% if event.average_rating == 2 %}
+      {% if event.average_rating > 1.5 and event.average_rating <= 2.5 %}
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       {% endif %}
-      {% if event.average_rating == 3 %}
+      {% if event.average_rating > 2.5 and event.average_rating <= 3.5 %}
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       {% endif %}
-      {% if event.average_rating == 4 %}
+      {% if event.average_rating > 3.5 and event.average_rating <= 4.5 %}
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="no-star">&#9733;</span>
       {% endif %}
-      {% if event.average_rating == 5 %}
+      {% if event.average_rating > 4.5 %}
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
       <span class="yes-star">&#9733;</span>
