--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,7 +4,7 @@
 <br>
 <h1 class="center-align">GetTogether</h1>
 <hr>
-<p class="center-align">We are on a mission to bring individuals closer to their community by enabling community members to easily coordinate free and low cost events for all ages. <a href="{% url 'login' %}">Log in</a> or <a href="{% url 'signup' %}">sign up</a> to get started.</p>
+<h6 class="center-align">We are on a mission to bring individuals closer to their community by enabling community members to easily coordinate free and low cost events for all ages. <a href="{% url 'login' %}">Log in</a> or <a href="{% url 'signup' %}">sign up</a> to see events in your neighborhood!</h6>
 <br>
 <br>
 <br>
