--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GetTogether</title>
+    <link rel="icon"href="{% static 'favicon.ico' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
@@ -26,8 +27,8 @@
                 </ul>
                 <ul class="right">
                     <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'index' %}">All Events</a></li>
                     {% if user.is_authenticated %}
+                    <li><a href="{% url 'index' %}">All Events</a></li>
                     <li><a href="{% url 'my_index' %}">My Events</a></li>
                     <li><a href="{% url 'events_create' %}">Add Event</a></li>
                     <li>
@@ -49,6 +50,9 @@
                     <li>Welcome,&nbsp;{{ user.username|capfirst }}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                 </ul>
                 {% endif %}
+                <ul class="left logo">
+                    <img src="https://i.imgur.com/8ejsXGY.png" alt="get-together-logo" height="60vmin">
+                </ul>
             </div>
         </nav>
     </header>
